--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ pdf-scan = "pdf_scan:main"
 [build-system]
 requires = ["uv_build>=0.9.0,<0.10.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
