Phase 1 & 2: Data models, web server, and modular architecture
Phase 1 - Data Models & Schema Design:
- Created database entities (Document, Finding, Metric)
- Defined enums (DocumentStatus, FindingType) using StrEnum
- Organized models in dedicated models/entities.py
- Added unit tests for all data models (4 tests)

Phase 2 - Web Server with Upload Endpoint:
- Implemented FastAPI server with /upload and /health endpoints
- Created modular validation and processing modules
- Added comprehensive file validation (type, size, content)
- Organized tests into unit/ and integration/ directories
- Added static test fixtures (sample PDFs with/without PII)
- Created manual testing scripts for curl-based testing
- All 32 tests passing (8 integration + 4 models + 20 validation)

Architecture:
- Framework-agnostic validation logic
- Separation of concerns (validation, processing, models)
- Test structure mirrors source structure
- Factory methods with auto-generated UUIDs
- Timezone-aware datetimes throughout

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ authors = [
     { name = "Ashkan Aghdai", email = "ashkan.aghdai+2@gmail.com" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.120.0",
+    "python-multipart>=0.0.20",
+    "uvicorn>=0.38.0",
+]
 
 [project.scripts]
 pdf-scan = "pdf_scan:main"
@@ -18,5 +22,17 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.1",
     "pytest>=8.4.2",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--strict-markers",
+    "--tb=short",
 ]
