--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.120.0",
+    "pypdf>=5.1.0",
     "python-multipart>=0.0.20",
     "uvicorn>=0.38.0",
 ]
