--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "asynch>=0.2.3",
     "fastapi>=0.120.0",
     "pypdf>=5.1.0",
+    "python-dotenv>=1.0.0",
     "python-multipart>=0.0.20",
     "uvicorn>=0.38.0",
 ]
@@ -25,6 +27,7 @@ build-backend = "uv_build"
 dev = [
     "httpx>=0.28.1",
     "pytest>=8.4.2",
+    "pytest-asyncio>=0.24.0",
 ]
 
 [tool.pytest.ini_options]
@@ -32,6 +35,7 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+asyncio_mode = "auto"
 addopts = [
     "-v",
     "--strict-markers",
