--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
   - type: web
     name: pdf-scan-service
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn src.pdf_scan.app:app --host 0.0.0.0 --port $PORT
+    buildCommand: uv sync --frozen
+    startCommand: uv run python -m pdf_scan.main
     envVars:
       - key: DATABASE_BACKEND
         value: memory
